src/objects/Task__c.object
<CustomObject>
    <fields>
        <fullName>Add_to_All_Current_Projects__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Save Task and Add to All Current Projects</description>
        <inlineHelpText>Save Task and Add to All Current Projects</inlineHelpText>
        <label>Add to All Current Projects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billable_by_default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Billable by default</description>
        <label>Billable by default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Common_task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Common task (add to all future projects)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <label>Hourly Rate</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>